[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
cmake.verbose = true
logging.level = "INFO"
cmake.args = ["-DBUILD_SHARED_LIBS=OFF", "-DVCPKG_OVERLAY_PORTS=overlay_ports"]

sdist.include = ["/conv_template.py", "/expand_sources.py"]
sdist.exclude = ["vcpkg/*", "docs/"]

[project]
name = "pybnesian"
authors = [{name = "David Atienza", email = "datienza@fi.upm.es"}]
description="PyBNesian is a Python package that implements Bayesian networks."
version = "0.5.0"
readme = {file = "README.md", content-type = "text/markdown"}
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = []
dependencies = [
    "pybind11>=2.6",
    "pyarrow>=14",
    "numpy"
]

[project.urls]
homepage = "https://github.com/davenza/PyBNesian"  # FIXME not shown by pip
documentation = "https://pybnesian.readthedocs.io/en/latest/?badge=latest"
changelog = "https://pybnesian.readthedocs.io/en/latest/changelog.html"

[tool.cibuildwheel]
skip=["pp*",
      "*-win32",
      "*-musllinux*",
      "*i686*",
      "*ppc64le*",
      "*s390x*"]

[tool.cibuildwheel.linux]
before-all = "yum install -y zip unzip kernel-headers perl-IPC-Cmd flex opencl-headers ocl-icd ocl-icd-devel"

[tool.cibuildwheel.macos]
before-all = ["sudo xcodebuild -runFirstLaunch",
              "sudo xcode-select -s /Applications/Xcode.app/Contents/Developer",
              "brew install bison ninja",
              "export CMAKE_GENERATOR=Xcode",
              "export MACOSX_DEPLOYMENT_TARGET=10.14",
              "export VCPKG_ENV_PASSTHROUGH=MACOSX_DEPLOYMENT_TARGET"]